Continued restructuring of the plugin files

--- a/assets/styles/unity3.scss
+++ b/assets/styles/unity3.scss
@@ -1,4 +1,7 @@
 @import "utilities";
 @import "login";
+@import "avatar";
+@import "jetpack";
+@import "wpgmaps";
 @import "post_groups";
 @import "sliderpro";
