--- a/assets/styles/unity3.css
+++ b/assets/styles/unity3.css
@@ -146,71 +146,17 @@ body.unity3-post-group-hide-add-term #col-right {
   .unity3-post-group-header.dashicons-before::before {
     font-size: 120px; }
 
-/* Column Classes
-ΓÇöΓÇöΓÇöΓÇöΓÇöΓÇöΓÇöΓÇöΓÇöΓÇöΓÇöΓÇöΓÇöΓÇöΓÇöΓÇöΓÇöΓÇöΓÇöΓÇö */
-.five-sixths,
-.four-fifths,
-.four-sixths,
-.one-fifth,
-.one-fourth,
-.one-half,
-.one-sixth,
-.one-third,
-.three-fifths,
-.three-fourths,
-.three-sixths,
-.two-fifths,
-.two-fourths,
-.two-sixths,
-.two-thirds {
-  float: left;
-  margin: 0 0 20px;
-  padding-left: 3%; }
-
-.one-half,
-.three-sixths,
-.two-fourths {
-  width: 48%; }
-
-.one-third,
-.two-sixths {
-  width: 31%; }
-
-.four-sixths,
-.two-thirds {
-  width: 65%; }
-
-.one-fourth {
-  width: 22.5%; }
-
-.three-fourths {
-  width: 73.5%; }
-
-.one-fifth {
-  width: 17.4%; }
-
-.two-fifths {
-  width: 37.8%; }
-
-.three-fifths {
-  width: 58.2%; }
-
-.four-fifths {
-  width: 78.6%; }
-
-.one-sixth {
-  width: 14%; }
-
-.five-sixths {
-  width: 82%; }
-
-.first {
-  clear: both;
-  padding-left: 0; }
-
 .sp-slide h1, .sp-slide h2, .sp-slide h3, .sp-slide h4, .sp-slide h5, .sp-slide h6, .sp-slide p, .sp-slide div, .sp-slide span, .sp-slide b, .sp-slide i, .sp-slide a, .sp-slide blockquote {
   color: #fff; }
+.sp-slide [data-role="centerCenter"] {
+  white-space: normal !important; }
+.sp-slide .sp-layer {
+  padding: 40px; }
 
+@media (max-width: 512px) {
+  .sp-slide .sp-layer {
+    padding: 0px !important;
+    width: 100% !important; } }
 @media (max-width: 384px) {
   .sp-layer.hide-on-xxs {
     display: none; } }
