--- a/assets/styles/_sliderpro.scss
+++ b/assets/styles/_sliderpro.scss
@@ -5,7 +5,7 @@
     color: #fff;
   }
 
-  [data-role="centerCenter"] {
+  [data-position="centerCenter"] {
     white-space: normal!important;
   }
 
