--- a/assets/styles/unity3.css
+++ b/assets/styles/unity3.css
@@ -61,6 +61,36 @@
   clear: both;
   padding-left: 0; }
 
+.lds-ripple {
+  display: inline-block;
+  position: relative;
+  width: 64px;
+  height: 64px;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%); }
+  .lds-ripple div {
+    position: absolute;
+    border: 4px solid #fff;
+    opacity: 1;
+    border-radius: 50%;
+    animation: lds-ripple 1.5s cubic-bezier(0, 0.2, 0.8, 1) infinite; }
+  .lds-ripple div:nth-child(2) {
+    animation-delay: -0.5s; }
+
+@keyframes lds-ripple {
+  0% {
+    top: 28px;
+    left: 28px;
+    width: 0;
+    height: 0;
+    opacity: 1; }
+  100% {
+    top: -1px;
+    left: -1px;
+    width: 58px;
+    height: 58px;
+    opacity: 0; } }
 body.login.login-action-login.wp-core-ui {
   background-color: #F1F1F1;
   background-image: url(../images/login-bg-mountains.jpg);
