--- a/assets/styles/_the-events-calendar.scss
+++ b/assets/styles/_the-events-calendar.scss
@@ -6,7 +6,9 @@
     &:before {
       content: " ";
       float: left;
-      padding: 20%;
+      padding: 5px;
+      padding-top: 25%;
+      width: 25%;
       margin: 10px;
       background: url(../images/events-calendar-bg.jpg) no-repeat;
       background-size: cover;
