--- a/assets/styles/unity3.css
+++ b/assets/styles/unity3.css
@@ -208,7 +208,9 @@ body.unity3-post-group-hide-add-term #col-right {
 .widget.tribe-events-list-widget .widget-wrap p:only-of-type:before {
   content: " ";
   float: left;
-  padding: 20%;
+  padding: 5px;
+  padding-top: 25%;
+  width: 25%;
   margin: 10px;
   background: url(../images/events-calendar-bg.jpg) no-repeat;
   background-size: cover; }
