--- a/assets/styles/_the-events-calendar.scss
+++ b/assets/styles/_the-events-calendar.scss
@@ -3,7 +3,8 @@
 }
 
 .widget.tribe-events-list-widget .widget-wrap {
-  p:only-of-type {
+    text-align: left;
+
     &:before {
       content: " ";
       float: left;
@@ -14,5 +15,21 @@
       background: url(../images/events-calendar-bg.jpg) no-repeat;
       background-size: cover;
     }
+
+  ol.tribe-list-widget {
+    float: left;
+
+    li {
+      padding-left: 0;
+    }
   }
+
+   p {
+     float: left;
+     margin-left: 10px;
+     text-align: center;
+     margin: 0px 10px;
+     padding: 0 5px;
+     clear: both;
+   }
 }
