improvements for The Events Calendar plugin

--- a/assets/styles/_the-events-calendar.scss
+++ b/assets/styles/_the-events-calendar.scss
@@ -2,7 +2,7 @@
   width: 100%;
 }
 
-.widget.tribe-events-list-widget .widget-wrap {
+.widget.tribe-events-list-widget {
     text-align: left;
 
     &:before {
