--- a/assets/sass/unity3.scss
+++ b/assets/sass/unity3.scss
@@ -1,4 +1,5 @@
 @import "utilities";
+@import "image-effects";
 @import "login";
 @import "avatar";
 @import "jetpack";
@@ -6,3 +7,4 @@
 @import "post_groups";
 @import "sliderpro";
 @import "the-events-calendar";
+@import "gallery";
