--- a/assets/styles/unity3.css
+++ b/assets/styles/unity3.css
@@ -1,239 +1,462 @@
-@charset "UTF-8";
+@charset 'UTF-8';
 /* Column Classes
-ΓÇöΓÇöΓÇöΓÇöΓÇöΓÇöΓÇöΓÇöΓÇöΓÇöΓÇöΓÇöΓÇöΓÇöΓÇöΓÇöΓÇöΓÇöΓÇöΓÇö */
-.lds-ripple {
-  display: inline-block;
-  position: relative;
-  width: 64px;
-  height: 64px;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%); }
-  .lds-ripple div {
+———————————————————— */
+.lds-ripple
+{
+    position: relative;
+    top: 50%;
+    left: 50%;
+
+    display: inline-block;
+
+    width: 64px;
+    height: 64px;
+
+    transform: translate(-50%, -50%);
+}
+
+.lds-ripple div
+{
     position: absolute;
-    border: 4px solid #fff;
+
+    animation: lds-ripple 1.5s cubic-bezier(0, .2, .8, 1) infinite;
+
     opacity: 1;
+    border: 4px solid #fff;
     border-radius: 50%;
-    animation: lds-ripple 1.5s cubic-bezier(0, 0.2, 0.8, 1) infinite; }
-  .lds-ripple div:nth-child(2) {
-    animation-delay: -0.5s; }
+}
 
-@keyframes lds-ripple {
-  0% {
-    top: 28px;
-    left: 28px;
-    width: 0;
-    height: 0;
-    opacity: 1; }
-  100% {
-    top: -1px;
-    left: -1px;
-    width: 58px;
-    height: 58px;
-    opacity: 0; } }
-.unity3-img-fx-1 {
-  opacity: 1;
-  transition: 0.5s; }
-  .unity3-img-fx-1:hover {
-    opacity: 0.6 !important; }
+.lds-ripple div:nth-child(2)
+{
+    animation-delay: -.5s;
+}
 
-body.login.login-action-login.wp-core-ui {
-  background-color: #F1F1F1;
-  background-image: url(../images/login-bg-mountains.jpg);
-  background-size: 760px 359px;
-  background-position: left bottom;
-  background-repeat: no-repeat; }
-body.login div#login h1 a {
-  width: 100px;
-  height: 70px;
-  background-image: url(../images/unity3_logo_100.png);
-  background-size: 100px 70px;
-  margin-bottom: 5px; }
+@keyframes lds-ripple
+{
+    0%
+    {
+        top: 28px;
+        left: 28px;
+
+        width: 0;
+        height: 0;
+
+        opacity: 1;
+    }
+    100%
+    {
+        top: -1px;
+        left: -1px;
+
+        width: 58px;
+        height: 58px;
+
+        opacity: 0;
+    }
+}
+
+.unity3-img-fx-1
+{
+    transition: .5s;
+
+    opacity: 1;
+}
+
+.unity3-img-fx-1:hover,
+.unity3-img-fx-1:focus
+{
+    opacity: .6;
+}
+
+body.login.login-action-login.wp-core-ui
+{
+    background-color: #f1f1f1;
+    background-image: url(../images/login-bg-mountains.jpg);
+    background-repeat: no-repeat;
+    background-position: left bottom;
+    background-size: 760px 359px;
+}
+
+body.login div#login h1 a
+{
+    width: 100px;
+    height: 70px;
+    margin-bottom: 5px;
+
+    background-image: url(../images/unity3_logo_100.png);
+    background-size: 100px 70px;
+}
+
 body.login #backtoblog,
-body.login #nav {
-  background-color: rgba(241, 241, 241, 0.78);
-  padding: 16px 24px !important;
-  margin: 0 !important; }
+body.login #nav
+{
+    margin: 0 !important;
+    padding: 16px 24px !important;
 
-.profile-php .user-profile-picture {
-  display: none; }
+    background-color: rgba(241, 241, 241, .78);
+}
 
-#avatar-manager tr:last-child {
-  display: none; }
+.profile-php .user-profile-picture
+{
+    display: none;
+}
 
-#stats-loading-wrap p a {
-  display: none !important; }
+#avatar-manager tr:last-child
+{
+    display: none;
+}
 
-body.jetpack_page_stats div.wrap h2 a {
-  display: none; }
+#stats-loading-wrap p a
+{
+    display: none !important;
+}
 
-div.gotonewdash {
-  display: none !important; }
+body.jetpack_page_stats div.wrap h2 a
+{
+    display: none;
+}
+
+div.gotonewdash
+{
+    display: none !important;
+}
 
 /* WP Google Maps (also check media queries) */
 .wpgmaps_directions_outer_div,
-.wpgmaps_directions_outer_div input[type="text"],
+.wpgmaps_directions_outer_div input[type='text'],
 .wpgmaps_directions_outer_div select,
-.wpgmaps_directions_outer_div textarea {
-  color: #222;
-  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; }
+.wpgmaps_directions_outer_div textarea
+{
+    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 
-.wpgmaps_directions_outer_div {
-  width: 100%;
-  padding-top: 20px !important;
-  padding-right: 50px; }
+    color: #222;
+}
 
-.wpgmaps_directions_outer_div h2 {
-  font-size: 26px;
-  font-weight: 700; }
+.wpgmaps_directions_outer_div
+{
+    width: 100%;
+    padding-top: 20px !important;
+    padding-right: 50px;
+}
 
-.wpgmaps_directions_outer_div table {
-  width: 100%;
-  margin-left: 50px;
-  border: none; }
+.wpgmaps_directions_outer_div h2
+{
+    font-size: 26px;
+    font-weight: 700;
+}
 
-.wpgmaps_directions_outer_div tbody {
-  border: none; }
+.wpgmaps_directions_outer_div table
+{
+    width: 100%;
+    margin-left: 50px;
 
-.wpgmaps_directions_outer_div td {
-  border: none; }
+    border: none;
+}
 
-.wpgmaps_directions_outer_div td label {
-  font-weight: 700; }
+.wpgmaps_directions_outer_div tbody
+{
+    border: none;
+}
 
-.wpgmaps_directions_outer_div td input[type="text"],
-.wpgmaps_directions_outer_div td select {
-  width: 90% !important; }
+.wpgmaps_directions_outer_div td
+{
+    border: none;
+}
 
-.wpgmaps_directions_outer_div td a {
-  display: block; }
+.wpgmaps_directions_outer_div td label
+{
+    font-weight: 700;
+}
 
-body.unity3-post-group-hide-add-term #col-left {
-  display: none; }
-body.unity3-post-group-hide-add-term #col-right {
-  width: 100%; }
+.wpgmaps_directions_outer_div td input[type='text'],
+.wpgmaps_directions_outer_div td select
+{
+    width: 90% !important;
+}
 
-.unity3-post-group-header {
-  background-color: #d6d6d6;
-  padding: 20px;
-  font-size: 30px; }
-  .unity3-post-group-header .title {
-    margin-left: 140px; }
-  .unity3-post-group-header.dashicons-before::before {
-    font-size: 120px; }
+.wpgmaps_directions_outer_div td a
+{
+    display: block;
+}
 
-.sp-slide h1, .sp-slide h2, .sp-slide h3, .sp-slide h4, .sp-slide h5, .sp-slide h6, .sp-slide p, .sp-slide div, .sp-slide span, .sp-slide b, .sp-slide i, .sp-slide a, .sp-slide blockquote {
-  color: #fff; }
-.sp-slide [data-position="centerCenter"] {
-  white-space: normal !important; }
-.sp-slide .sp-layer {
-  padding: 40px; }
+.no-longer-need
+{
+    display: none;
+}
 
-@media (max-width: 512px) {
-  .sp-slide .sp-layer {
-    padding: 0px !important;
-    width: 100% !important; } }
-@media (max-width: 384px) {
-  .sp-layer.hide-on-xxs {
-    display: none; } }
-@media (min-width: 384px) and (max-width: 512px) {
-  .sp-layer.hide-on-xs {
-    display: none; } }
-@media (min-width: 512px) and (max-width: 768px) {
-  .sp-layer.hide-on-sm {
-    display: none; } }
-@media (min-width: 768px) and (max-width: 896px) {
-  .sp-layer.hide-on-md {
-    display: none; } }
-@media (min-width: 896px) and (max-width: 1152px) {
-  .sp-layer.hide-on-lg {
-    display: none; } }
-@media (min-width: 1280px) {
-  .sp-layer.hide-on-xl {
-    display: none; } }
-.archive.post-type-archive-tribe_events .content .entry {
-  width: 100%; }
+body.unity3-post-group-hide-add-term #col-left
+{
+    display: none;
+}
 
-.widget.tribe-events-list-widget {
-  text-align: left; }
-  .widget.tribe-events-list-widget:before {
-    content: " ";
+body.unity3-post-group-hide-add-term #col-right
+{
+    width: 100%;
+}
+
+.unity3-post-group-header
+{
+    font-size: 30px;
+
+    padding: 20px;
+
+    background-color: #d6d6d6;
+}
+
+.unity3-post-group-header .title
+{
+    margin-left: 140px;
+}
+
+.unity3-post-group-header.dashicons-before::before
+{
+    font-size: 120px;
+}
+
+.sp-slide h1,
+.sp-slide h2,
+.sp-slide h3,
+.sp-slide h4,
+.sp-slide h5,
+.sp-slide h6,
+.sp-slide p,
+.sp-slide div,
+.sp-slide span,
+.sp-slide b,
+.sp-slide i,
+.sp-slide a,
+.sp-slide blockquote
+{
+    color: #fff;
+}
+
+.sp-slide [data-position='centerCenter']
+{
+    white-space: normal !important;
+}
+
+.sp-slide .sp-layer
+{
+    padding: 40px;
+}
+
+.archive.post-type-archive-tribe_events .content .entry
+{
+    width: 100%;
+}
+
+.widget.tribe-events-list-widget
+{
+    text-align: left;
+}
+
+.widget.tribe-events-list-widget:before
+{
     float: left;
-    padding: 5px;
-    padding-top: 25%;
+
     width: 25%;
     margin: 10px;
+    padding: 5px;
+    padding-top: 25%;
+
+    content: ' ';
+
     background: url(../images/events-calendar-bg.jpg) no-repeat;
-    background-size: cover; }
-  .widget.tribe-events-list-widget ol.tribe-list-widget {
-    float: left; }
-    .widget.tribe-events-list-widget ol.tribe-list-widget li {
-      padding-left: 0; }
-  .widget.tribe-events-list-widget p {
+    background-size: cover;
+}
+
+.widget.tribe-events-list-widget ol.tribe-list-widget
+{
     float: left;
+}
+
+.widget.tribe-events-list-widget ol.tribe-list-widget li
+{
+    padding-left: 0;
+}
+
+.widget.tribe-events-list-widget p
+{
+    float: left;
+    clear: both;
+
+    margin: 0 10px;
     margin-left: 10px;
-    text-align: center;
-    margin: 0px 10px;
     padding: 0 5px;
-    clear: both; }
 
-.archive .unity3_gallery.entry {
-  padding: 20px; }
-  .archive .unity3_gallery.entry .entry-title {
-    font-size: 1.5rem; }
-  .archive .unity3_gallery.entry .entry-content img {
+    text-align: center;
+}
+
+.archive .unity3_gallery.entry
+{
+    padding: 20px;
+}
+
+.archive .unity3_gallery.entry .entry-title
+{
+    font-size: 24px;
+    font-size: 1.5rem;
+}
+
+.archive .unity3_gallery.entry .entry-content img
+{
+    transition: .5s;
+
     opacity: 1;
-    transition: 0.5s; }
-    .archive .unity3_gallery.entry .entry-content img:hover {
-      opacity: 0.6 !important; }
+}
 
-.gallery.unity3-theme img {
-  position: relative;
-  z-index: 100; }
-  .gallery.unity3-theme img:hover {
+.archive .unity3_gallery.entry .entry-content img:hover,
+.archive .unity3_gallery.entry .entry-content img:focus
+{
+    opacity: .6 !important;
+}
+
+.gallery.unity3-theme img
+{
+    position: relative;
+    z-index: 100;
+}
+
+.gallery.unity3-theme img:hover,
+.gallery.unity3-theme img:focus
+{
     transform: scale(1.2);
-    opacity: .9; }
-.gallery.unity3-theme .gallery-icon {
-  position: relative; }
-.gallery.unity3-theme .gallery-icon:before {
-  content: " ";
-  width: calc(100% - 30px);
-  height: 100%;
-  background-color: #cec6b6;
-  display: block;
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 0;
-  transform: rotate(4deg);
-  margin-left: 15px;
-  margin-top: -5px; }
-.gallery.unity3-theme .gallery-icon:after {
-  content: " ";
-  width: calc(100% - 30px);
-  height: 100%;
-  background-color: #e6e6e6;
-  display: block;
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 0;
-  transform: rotate(-4deg);
-  margin-left: 15px;
-  margin-top: -5px; }
-@media only screen and (max-width: 512px) {
-  .gallery.unity3-theme.three-col-on-xs .gallery-item {
-    width: 33%; }
-  .gallery.unity3-theme.two-col-on-xs .gallery-item {
-    width: 48%; }
-  .gallery.unity3-theme.one-col-on-xs .gallery-item {
-    width: 100%; } }
-@media only screen and (max-width: 384px) {
-  .gallery.unity3-theme.three-col-on-xxs .gallery-item {
-    width: 33%; }
-  .gallery.unity3-theme.two-col-on-xxs .gallery-item {
-    width: 48%; }
-  .gallery.unity3-theme.one-col-on-xxs .gallery-item {
-    width: 100%; } }
 
-/*# sourceMappingURL=unity3.css.map */
+    opacity: .9;
+}
+
+.gallery.unity3-theme .gallery-icon
+{
+    position: relative;
+}
+
+.gallery.unity3-theme .gallery-icon:before
+{
+    position: absolute;
+    z-index: 0;
+    top: 0;
+    left: 0;
+
+    display: block;
+
+    width: calc(100% - 30px);
+    height: 100%;
+    margin-top: -5px;
+    margin-left: 15px;
+
+    content: ' ';
+    transform: rotate(4deg);
+
+    background-color: #cec6b6;
+}
+
+.gallery.unity3-theme .gallery-icon:after
+{
+    position: absolute;
+    z-index: 0;
+    top: 0;
+    left: 0;
+
+    display: block;
+
+    width: calc(100% - 30px);
+    height: 100%;
+    margin-top: -5px;
+    margin-left: 15px;
+
+    content: ' ';
+    transform: rotate(-4deg);
+
+    background-color: #e6e6e6;
+}
+
+@media (min-width: 384px) and (max-width: 512px)
+{
+    .sp-layer.hide-on-xs
+    {
+        display: none;
+    }
+}
+
+@media (min-width: 512px) and (max-width: 768px)
+{
+    .sp-layer.hide-on-sm
+    {
+        display: none;
+    }
+}
+
+@media (min-width: 768px) and (max-width: 896px)
+{
+    .sp-layer.hide-on-md
+    {
+        display: none;
+    }
+}
+
+@media (min-width: 896px) and (max-width: 1152px)
+{
+    .sp-layer.hide-on-lg
+    {
+        display: none;
+    }
+}
+
+@media (min-width: 1280px)
+{
+    .sp-layer.hide-on-xl
+    {
+        display: none;
+    }
+}
+
+@media (max-width: 512px)
+{
+    .sp-slide .sp-layer
+    {
+        width: 100% !important;
+        padding: 0 !important;
+    }
+}
+
+@media (max-width: 384px)
+{
+    .sp-layer.hide-on-xxs
+    {
+        display: none;
+    }
+}
+
+@media only screen and (max-width: 512px)
+{
+    .gallery.unity3-theme.three-col-on-xs .gallery-item
+    {
+        width: 33%;
+    }
+    .gallery.unity3-theme.two-col-on-xs .gallery-item
+    {
+        width: 48%;
+    }
+    .gallery.unity3-theme.one-col-on-xs .gallery-item
+    {
+        width: 100%;
+    }
+}
+
+@media only screen and (max-width: 384px)
+{
+    .gallery.unity3-theme.three-col-on-xxs .gallery-item
+    {
+        width: 33%;
+    }
+    .gallery.unity3-theme.two-col-on-xxs .gallery-item
+    {
+        width: 48%;
+    }
+    .gallery.unity3-theme.one-col-on-xxs .gallery-item
+    {
+        width: 100%;
+    }
+}
+
+/*# sourceMappingURL=assets/styles/unity3.css.map */
