Structural changes to the plugin

--- a/assets/styles/front/_sliderpro.scss
+++ b/assets/styles/front/_sliderpro.scss
@@ -18,7 +18,7 @@
 @media (max-width: 512px) {
   .sp-slide {
     .sp-layer {
-      padding: 0px!important;
+      padding: 0!important;
       width: 100%!important;
     }
   }
