--- a/assets/styles/front/unity3-front.scss
+++ b/assets/styles/front/unity3-front.scss
@@ -1,10 +1,8 @@
-@import "utilities";
+@import "../utilities";
 @import "image-effects";
 @import "login";
 @import "avatar";
-@import "jetpack";
 @import "wpgmaps";
-@import "post_groups";
 @import "sliderpro";
 @import "the-events-calendar";
 @import "gallery";
