--- a/assets/styles/front/_login.scss
+++ b/assets/styles/front/_login.scss
@@ -3,7 +3,7 @@ body {
 
     &.login-action-login.wp-core-ui {
       background-color: #F1F1F1;
-      background-image: url(../images/login-bg-mountains.jpg);
+      background-image: url(../../images/login-bg-mountains.jpg);
       background-size: 760px 359px;
       background-position: left bottom;
       background-repeat: no-repeat;
@@ -12,7 +12,7 @@ body {
     div#login h1 a {
       width: 100px;
       height: 70px;
-      background-image: url(../images/unity3_logo_100.png);
+      background-image: url(../../images/unity3_logo_100.png);
       background-size: 100px 70px;
       margin-bottom: 5px;
     }
