--- a/assets/styles/front/_the-events-calendar.scss
+++ b/assets/styles/front/_the-events-calendar.scss
@@ -12,7 +12,7 @@
       padding-top: 25%;
       width: 25%;
       margin: 10px;
-      background: url(../images/events-calendar-bg.jpg) no-repeat;
+      background: url(../../images/events-calendar-bg.jpg) no-repeat;
       background-size: cover;
     }
 
