Updated css for centering a YouTube embed

--- a/assets/src/styles/front/unity3-front.scss
+++ b/assets/src/styles/front/unity3-front.scss
@@ -7,6 +7,7 @@
 @import "sliderpro";
 @import "the-events-calendar";
 @import "gallery";
+@import "wp-blocks";
 
 /** AOS Styles */
 @import "node_modules/aos/dist/aos";
